fix: fix title overflow in vendor item

--- a/src/sass/components/vendors-list.scss
+++ b/src/sass/components/vendors-list.scss
@@ -78,7 +78,7 @@
                         text-overflow: ellipsis;
                         overflow: hidden;
                         white-space: nowrap;
-                        max-width: 18rem;
+                        max-width: 12rem;
                     }
                 }
 
